# arca

./: .gate-allow  .gitignore  .tarpaulin.toml  Cargo.toml  README.md  deny.toml
.cargo/: audit.toml
.github/workflows/: ci.yml
bridge/: arca-xmpp.conf.example  arca-xmpp.py  test_arca_xmpp.py
crates/arca-core/: Cargo.toml
crates/arca-core/src/: calendar.rs  db.rs  debt.rs  demo.rs  error.rs  ids.rs  lib.rs  money.rs  pp.rs  provider.rs  recurring.rs  report.rs  rpc.rs  time.rs
crates/arca-core/tests/: proptests.proptest-regressions  proptests.rs  recurring_detection.rs
crates/arca-daemon/: Cargo.toml
crates/arca-daemon/src/: alerts.rs  calendar.rs  config.rs  http.rs  lib.rs  log_writer.rs  main.rs  peercred.rs  pledge.rs  reports.rs  scheduler.rs  secrets.rs
crates/arca-daemon/src/providers/: convert.rs  gold_spot.rs  manual.rs  mercury.rs  mod.rs  openai_usage.rs  openrouter.rs  plaid.rs  postmark.rs  registry.rs  scrapecreators.rs  stripe.rs  vultr.rs  vultr_cost.rs  xai.rs  xmr_spot.rs
crates/arca-daemon/src/rpc/: handler.rs  server.rs
crates/arca-daemon/tests/: providers_wiremock.rs  usage_wiremock.rs
crates/arca-tui/: Cargo.toml
crates/arca-tui/src/: app.rs  client.rs  main.rs
crates/arca-tui/tests/: soak.rs
demo/: demo.tape  record.sh
docs/: architecture.md  providers.md  threat-model.md
etc/: arca.conf.example
fuzz/: Cargo.toml
fuzz/fuzz_targets/: rpc_request.rs  rpc_response.rs
migrations/: 0001_init.sql  0002_provider_raw.sql  0003_accounts_external_id.sql  0004_price_snapshots.sql  0005_account_tier.sql  0006_scheduled_jobs.sql  0007_recurring_series.sql  0008_recurring_label_nullable.sql
rc.d/: arca  arca_xmpp
scripts/: qa.sh
