[package]
name        = "arca-core"
version     = "0.1.0"
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true

[lints]
workspace = true

[dependencies]
thiserror         = { workspace = true }
tracing           = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
chrono            = { workspace = true }
chrono-tz         = { workspace = true }
rusqlite          = { workspace = true }
tokio             = { workspace = true }
async-trait       = { workspace = true }

[dev-dependencies]
tempfile          = { workspace = true }
proptest          = { workspace = true }
rusqlite          = { workspace = true } # integration tests seed rows via raw SQL
