[package]
name        = "arca-daemon"
version     = "0.1.0"
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true

[lints]
workspace = true

[lib]
name = "arca_daemon"
path = "src/lib.rs"

[[bin]]
name = "arca-daemon"
path = "src/main.rs"

[dependencies]
arca-core         = { path = "../arca-core" }
anyhow            = { workspace = true }
tracing           = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender  = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
tokio             = { workspace = true }
toml              = { workspace = true }
clap              = { workspace = true }
async-trait       = { workspace = true }
chrono            = { workspace = true }
chrono-tz         = { workspace = true }
reqwest           = { workspace = true }
age               = { workspace = true }
secrecy           = { workspace = true }

[dev-dependencies]
tempfile          = { workspace = true }
wiremock          = { workspace = true }
rusqlite          = { workspace = true }
