[package]
name        = "arca-tui"
version     = "0.1.0"
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true

[lints]
workspace = true

[[bin]]
name = "arca"
path = "src/main.rs"

[dependencies]
arca-core         = { path = "../arca-core" }
anyhow            = { workspace = true }
serde_json        = { workspace = true }
tokio             = { workspace = true }
ratatui           = { workspace = true }
crossterm         = { workspace = true }
clap              = { workspace = true }

[dev-dependencies]
portable-pty      = { workspace = true }
libc              = { workspace = true }
